# pgdog

./: .dockerignore  .gitignore  404.html  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  catalog-info.yaml  cli.sh  docker-compose.yml  example.pgdog.toml  example.users.toml  flake.nix  mise.toml  mkdocs.yml  pgdog.toml  requirements.txt  sitemap.xml  users.toml
.rwx/: rust.yml  (+1 more)
integration/rust/: Cargo.toml  dev.sh
integration/rust/src/: setup.rs  utils.rs
integration/rust/tests/: mod.rs  stats.rs
integration/rust/tests/bench/: mod.rs  prepared_stress.rs
integration/rust/tests/integration/: admin_termination.rs  auth.rs  auto_id.rs  avg.rs  ban.rs  cache_bench.rs  cancel.rs  client_ids.rs  concurrent_pool_creation.rs  connection_recovery.rs  copy.rs  cross_shard_disabled.rs  cross_shard_oid_drift.rs  distinct.rs  explain.rs  fake_transactions.rs  having.rs  idle_in_transaction.rs  insert_split.rs  limit.rs  maintenance_mode.rs  max.rs  mod.rs  multi_set.rs  notify.rs  offset.rs  order_by_cross_shard_merge.rs  partial_req.rs  per_stmt_routing.rs  pool_cap_saturation.rs  prepared.rs  protocol_version.rs  reload.rs  reset.rs  rewrite.rs  rewrite_omni.rs  savepoint.rs  set_config.rs  set_in_transaction.rs  set_sharding_key.rs  (+13 more)
integration/rust/tests/sqlx/: bad_auth.rs  mod.rs  multi_set.rs  params.rs  select.rs  unique_id.rs
integration/rust/tests/tokio_postgres/: copy.rs  mod.rs  nulls.rs  prepared.rs  select.rs  transaction.rs
pgdog/: CLAUDE.md  Cargo.toml  build.rs
pgdog-config/: AGENTS.md  CONTRIBUTING.md  Cargo.toml
pgdog-config/src/: auth.rs  cache.rs  core.rs  data_types.rs  database.rs  error.rs  fdw.rs  general.rs  lib.rs  memory.rs  networking.rs  otel.rs  pooling.rs  replication.rs  result_cache.rs  rewrite.rs  sharding.rs  system_catalogs.rs  url.rs  users.rs  util.rs  vault.rs
pgdog-plugin/: Cargo.toml  README.md  build.rs
pgdog-plugin/include/: plugin.h  types.h
pgdog-plugin/src/: ast.rs  auth.rs  bindings.rs  comp.rs  config.rs  context.rs  copy.rs  database.rs  error_response.rs  input.rs  lib.rs  logging.rs  macros.rs  order_by.rs  output.rs  parameters.rs  plugin.rs  prelude.rs  query.rs  route.rs  string.rs  vec.rs
pgdog-postgres-types/: Cargo.toml
pgdog-postgres-types/src/: array.rs  bigint.rs  boolean.rs  data.rs  datum.rs  double.rs  error.rs  float.rs  format.rs  integer.rs  interface.rs  interval.rs  lib.rs  numeric.rs  oid.rs  smallint.rs  text.rs  timestamp.rs  timestamptz.rs  uuid.rs  vector.rs
pgdog-stats/: Cargo.toml
pgdog-stats/src/: client.rs  lib.rs  memory.rs  pool.rs  replication.rs  resharding.rs  schema.rs  server.rs  state.rs  user.rs
pgdog/benches/: comment_parser.rs
pgdog/docs/issues/: omni-table-subscriber-deadlock.md
pgdog/src/: cli.rs  healthcheck.rs  lib.rs  main.rs  sighup.rs  signals.rs  sigusr.rs  state.rs  tasks.rs  test_utils.rs  unique_id.rs  util.rs
pgdog/src/admin/: backend.rs  ban.rs  copy_data.rs  cutover.rs  error.rs  healthcheck.rs  maintenance_mode.rs  mod.rs  named_row.rs  parser.rs  pause.rs  pause_traffic.rs  prelude.rs  probe.rs  reconnect.rs  reload.rs  replicate.rs  reset_prepared.rs  reset_query_cache.rs  reshard.rs  schema_sync.rs  server.rs  set.rs  setup_schema.rs  show_bans.rs  show_client_memory.rs  show_clients.rs  show_config.rs  show_config_file.rs  show_fdw.rs  show_instance_id.rs  show_listeners.rs  show_lists.rs  show_mirror_stats.rs  show_mirrors.rs  show_peers.rs  show_pools.rs  show_prepared_statements.rs  show_query_cache.rs  show_replication.rs  (+14 more)
pgdog/src/admin/tests/: mod.rs
pgdog/src/api/: async_task.rs  copy_data.rs  mod.rs  replication.rs  resharding.rs  schema_sync.rs
pgdog/src/auth/: auth_result.rs  error.rs  md5.rs  mod.rs  plugin.rs  rate_limit.rs  vault.rs
pgdog/src/auth/gssapi/: context.rs  credential_provider.rs  error.rs  mod.rs  scoped_env.rs  server.rs  tests.rs  ticket_cache.rs  ticket_manager.rs
pgdog/src/auth/jwt/: error.rs  mod.rs  pem_cache.rs  tests.rs
pgdog/src/auth/scram/: client.rs  error.rs  mod.rs  server.rs
pgdog/src/backend/: connect_reason.rs  databases.rs  disconnect_reason.rs  error.rs  maintenance_mode.rs  mod.rs  prepared_statements.rs  reload_notify.rs  server.rs  server_options.rs  server_state.rs  stats.rs  validation.rs
pgdog/src/backend/auth/: azure_workload_identity.rs  mod.rs  rds_iam.rs  token_cache.rs  vault.rs
pgdog/src/config/: auth.rs  cache.rs  convert.rs  core.rs  database.rs  error.rs  general.rs  gssapi.rs  memory.rs  mod.rs  networking.rs  overrides.rs  pooling.rs  replication.rs  rewrite.rs  sharding.rs  tests.rs  url.rs  users.rs
pgdog/src/frontend/: buffer.rs  buffered_query.rs  client.rs  client_request.rs  comms.rs  connected_client.rs  error.rs  listener.rs  logical_session.rs  logical_transaction.rs  mod.rs  query_logger.rs  regex_parser.rs  replication.rs  stats.rs
pgdog/src/net/: buffer.rs  bytes_sized.rs  compressed_string.rs  decoder.rs  error.rs  mod.rs  parameter.rs  parameter_diff.rs  protocol_message.rs  stream.rs  tls.rs  tweaks.rs
pgdog/src/plugin/: mod.rs
pgdog/src/result_cache/: mod.rs  redis.rs  test.rs
pgdog/src/stats/: clients.rs  http_server.rs  listeners.rs  logger.rs  memory.rs  mirror.rs  mirror_stats.rs  mod.rs  open_metric.rs  otel.rs  otel_exporter.rs  pools.rs  query_cache.rs  result_cache.rs  rewrite_stats.rs  transactions.rs  two_pc.rs
pgdog/src/wire_protocol/: mod.rs  wire_serializable.rs
pgdog/tests/: backend_gssapi_test.rs  copy.csv  gssapi_integration_test.rs  gssapi_test.rs  pgbench.sh  psql.sh  test_client_listener.rs  tls_cache.rs
pgdog/tests/flame/: profile.sh
pgdog/tests/pgbouncer/: benchmark_spec.rb  pgbench-parser.sql  pgbench.sql  pgdog.toml
pgdog/tests/tls/: ca_chain.pem  ca_intermediate.pem  ca_root.pem  cert_san_only.pem  cert_with_san.pem  chain_cert.pem  chain_key.pem  client_signed_by_intermediate.pem
pgdog/tests/vector/: README.md  measure_recall.py  read_parquet.py
plugins/pgdog-primary-only-tables/: Cargo.toml  config.example.toml
plugins/pgdog-primary-only-tables/src/: lib.rs
(+1300 files in other folders)
