[workspace]

members = [
    "examples/demo",
    "integration/rust",
    "pgdog",
    "pgdog-config",
    "pgdog-macros",
    "pgdog-plugin",
    "pgdog-postgres-types",
    "pgdog-stats",
    "pgdog-vector",
    "plugins/pgdog-example-plugin",
]
resolver = "2"

# [patch.crates-io]
# tokio = { path = "../tokio/tokio" }

# [patch."https://github.com/pgdogdev/pg_query.rs.git"]
# pg_query = { path = "../pg_query.rs" }

[profile.release]
codegen-units = 1
lto = true

[profile.flamegraph]
inherits = "release"
lto = false
codegen-units = 16
debug = true

[workspace.dependencies]
pgdog-plugin = { path = "./pgdog-plugin", version = "0.2.0" }
