[workspace]
resolver = "2"
members = [
  "examples/demo",
  "integration/rust",
  "pgdog",
  "pgdog-config",
  "pgdog-macros",
  "pgdog-plugin",
  "pgdog-postgres-types",
  "pgdog-stats",
  "pgdog-vector",
  "plugins/pgdog-example-plugin",
]

[workspace.dependencies]
pgdog-plugin = { path = "./pgdog-plugin", version = "0.2.0" }
schemars = { version = "1.2.1", features = ["uuid1"] }

# [patch.crates-io]
# tokio = { path = "../tokio/tokio" }

# [patch."https://github.com/pgdogdev/pg_query.rs.git"]
# pg_query = { path = "../pg_query.rs" }

[profile.release]
lto = true
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = true
lto = false
codegen-units = 16
