[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
  "examples/demo",
  "integration/rust",
  "integration/two_pc_crash_safety/wal_helper",
  "pgdog",
  "pgdog-config",
  "pgdog-macros",
  "pgdog-plugin",
  "pgdog-postgres-types",
  "pgdog-stats",
  "pgdog-vector",
  "plugins/pgdog-example-plugin", "plugins/pgdog-primary-only-tables",
  "scripts/*",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
pgdog-plugin = { path = "./pgdog-plugin", version = "0.3.0" }
pgdog-config = { path = "./pgdog-config", version = "0.1.0" }
bon = "3.9"
schemars = { version = "1.2.1", features = ["uuid1"] }
serde_json = "1.0"
indexmap = { version = "2.14", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
futures-util = "0.3.32"

# [patch.crates-io]
# tokio = { path = "../tokio/tokio" }

# [patch."https://github.com/pgdogdev/pg_query.rs.git"]
# pg_query = { path = "../pg_query.rs" }

# [patch."https://github.com/pgdogdev/pg_raw_parse.git"]
# pg_raw_parse = { path = "../pg_raw_parse" }

[profile.release]
lto = true
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = true
lto = false
codegen-units = 16
