[package]
name = "pgdog-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "*"

[dev-dependencies]
tempfile = "3.23.0"
