[package]
name = "pgdog-config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tracing = "0.1"
thiserror = "2"
toml = "0.8"
url = "2"
uuid.workspace = true
rand = "*"
pgdog-vector = { path = "../pgdog-vector" }
once_cell = "*"
schemars.workspace = true
indexmap.workspace = true
derive_more = { version = "2", features = ["from_str"] }

[dev-dependencies]
tempfile = "3.23.0"
