[package]
name = "pgdog-plugin"
version = "0.1.8"
edition = "2021"
license = "MIT"
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pgdogdev/pgdog"
homepage = "https://pgdog.dev"
description = "PgDog plugin interface and helpers"
include = ["src/", "include/", "build.rs", "LICENSE", "README.md"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libloading = "0.8"
libc = "0.2"
tracing = "0.1"
pg_query = { git = "https://github.com/pgdogdev/pg_query.rs.git", rev = "4f79b92fe4d630b1f253f27f13c9096c77530fd6" }
pgdog-macros = { path = "../pgdog-macros", version = "0.1.1" }
toml = "0.9"

[build-dependencies]
bindgen = "0.71.0"
