[package]
name = "pgdog-plugin"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pgdogdev/pgdog"
homepage = "https://pgdog.dev"
description = "PgDog plugin interface and helpers"
include = ["src/", "include/", "build.rs", "LICENSE", "README.md"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libloading = "0.8"
pg_query = { git = "https://github.com/pgdogdev/pg_query.rs.git", rev = "d30dcb47fdf3fa77d102b813a34392146642903a" }
pgdog-macros = { path = "../pgdog-macros", version = "0.1.1" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
bindgen = "0.71.0"
