[package]
name = "pgdog-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "*", features = ["derive", "rc"]}
pgdog-config = { path = "../pgdog-config" }
pgdog-postgres-types = { path = "../pgdog-postgres-types" }
bytes = "*"
indexmap = { version = "*", features = ["serde"] }
