[package]
name = "pgdog"
version = "0.1.46"
edition = "2024"
description = "Modern PostgreSQL proxy, pooler, load balancer and database sharder."
authors = ["PgDog <hi@pgdog.dev>"]
license = "AGPL-3.0"
homepage = "https://pgdog.dev"
repository = "https://github.com/pgdogdev/pgdog"
readme = "README.md"
default-run = "pgdog"

[features]
tui = ["ratatui"]
new_parser = ["pg_raw_parse"]

[dependencies]
pin-project = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "std"] }
tracing-throttle = "0.4"
parking_lot = "0.12"
thiserror = "2"
derive_more = { version = "2", features = ["display", "error"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
rand = "0.9.2"
once_cell = "1"
tokio-rustls = { version = "0.26", features = ["aws-lc-rs"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1"
aws-lc-rs = "1"
arc-swap = "1"
toml = "0.8"
pgdog-plugin.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
fnv = "1"
scram = { git = "https://github.com/pgdogdev/scram.git", rev = "053e108210a35232efe60023ec43288fd601d8c4" }
base64 = "0.22"
md5 = "0.7"
futures = "0.3"
csv-core = "0.1"
pg_query = { git = "https://github.com/pgdogdev/pg_query.rs.git", rev = "97019d0c13ad0b888fe91ee5bed5448b5f409cdd" }
regex = "1"
memchr = "2"
semver = "1"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
ratatui = { version = "0.30.0-alpha.1", optional = true }
rmp-serde = "1"
rust_decimal = { version = "1.36", features = ["db-postgres", "macros", "maths"] }
chrono = "0.4"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
socket2 = { version = "0.5.9", features = ["all"] }
sha1 = "0.10"
indexmap.workspace = true
lru = "0.16"
hickory-resolver = "0.25.2"
lazy_static = "1"
dashmap = "6"
derive_builder = "0.20.2"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-rds = { version = "1", default-features = false }
pgdog-config = { path = "../pgdog-config" }
pgdog-vector = { path = "../pgdog-vector" }
pgdog-stats = { path = "../pgdog-stats" }
pgdog-postgres-types = { path = "../pgdog-postgres-types"}
azure_identity = "0.34.0"
azure_core = "0.34.0"
crc32c = "0.6.8"
bit-vec = "0.8"
smallvec = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "json"] }
hex = "0.4"
x509-parser = "0.18"
pg_raw_parse = { git = "https://github.com/pgdogdev/pg_raw_parse.git", rev = "922d89c", optional = true }
itertools = "0.15.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"


[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3.23.0"
stats_alloc = "0.1.10"
brunch = "0.5"
wiremock = "0.6"

[[bench]]
name = "comment_parser"
harness = false
