[package]
name = "integration_tests_rust"
version = "0.1.0"
edition = "2024"

[lib]
test = true

[dependencies]
tokio-postgres = {version = "0.7.13", features = ["with-uuid-1"]}
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "bigdecimal", "chrono", "json", "rust_decimal"]}
tokio = { version = "1", features = ["full"]}
futures-util.workspace = true
uuid.workspace = true
serial_test = "3"
chrono = "0.4"
parking_lot.workspace = true
reqwest.workspace = true
serde_json.workspace = true
ordered-float = "4.2"
tokio-rustls = "0.26"
libc = "0.2"
rand = "0.9"
bytes.workspace = true
rust_decimal = { version = "1.42.0", features = ["macros"] }
