[package]
name = "pgdog-primary-only-tables"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pgdog-plugin.workspace = true
once_cell = "1"
parking_lot = "0.12"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"]}
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
